tests/fixtures/invalid/none_lshift_none.py
# Cannot left shift None and None
x: None = None << None
